--- a/src/skins/iResponsive/styles/_designer.scss
+++ b/src/skins/iResponsive/styles/_designer.scss
@@ -4,9 +4,8 @@
 
     #ssg-canvas {
         display: block;
-        width: 400px;
-        height: 400px;
+        box-sizing: border-box;
         margin:  0 auto;
-        border: 1px solid blue;
+        border: 1px solid red;
     }
 }
