--- a/src/skins/iResponsive/styles/_designer.scss
+++ b/src/skins/iResponsive/styles/_designer.scss
@@ -8,4 +8,15 @@
         margin:  0 auto;
         border: 1px solid red;
     }
+
+
+    .gallery-image {
+        width: 55px;
+        height: 40px;
+        background-size: cover;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
