--- a/src/skins/iResponsive/templates/designer.tmpl
+++ b/src/skins/iResponsive/templates/designer.tmpl
@@ -1,5 +1,6 @@
 <div class="designer">
     <canvas id="ssg-canvas" width="400" height="400"></canvas>
     <div class="cliparts"></div>
+    <div id="error-message"></div>
 </div>
 
