--- a/src/skins/iResponsive/templates/designer.tmpl
+++ b/src/skins/iResponsive/templates/designer.tmpl
@@ -1,6 +1,21 @@
 <div class="designer">
-    <canvas id="ssg-canvas" width="400" height="400"></canvas>
+    <canvas id="ssg-canvas"></canvas>
     <div class="cliparts"></div>
+    <div class="toolbox">
+        <button id="btn-up">&uarr;</button>
+        <button id="btn-down">&darr;</button>
+        <button id="btn-left">&larr;</button>
+        <button id="btn-right">&rarr;</button>
+        <button id="btn-rotate-left">&#8634;</button>
+        <button id="btn-rotate-right">&#8635;</button>
+        <button id="btn-flip">&harr;</button>
+
+        <button id="btn-preview">Preview</button>
+        <button id="btn-submit">Submit</button>
+
+    </div>
     <div id="error-message"></div>
 </div>
+
+<div class="preview-container"></div>
 
