--- a/src/skins/iResponsive/styles/_designer.scss
+++ b/src/skins/iResponsive/styles/_designer.scss
@@ -6,7 +6,9 @@
         display: block;
         box-sizing: border-box;
         margin:  0 auto;
-        border: 1px solid red;
+        border: 1px solid pink;
+        width: 100%;
+        height: 100%;
     }
 
 
@@ -19,4 +21,13 @@
             height: 100%;
         }
     }
+}
+
+
+.preview-container {
+    box-sizing: border-box;
+    width: 800px;
+    height: 507px;
+    border: 1px solid bisque;
+    margin-top: 60px;
 }
