--- a/src/skins/iResponsive/templates/designer.tmpl
+++ b/src/skins/iResponsive/templates/designer.tmpl
@@ -12,6 +12,7 @@
 
         <button id="btn-preview">Preview</button>
         <button id="btn-submit">Submit</button>
+        <button id="btn-text">Add Text</button>
 
     </div>
     <div id="error-message"></div>
