--- a/src/skins/iResponsive/templates/designer.tmpl
+++ b/src/skins/iResponsive/templates/designer.tmpl
@@ -12,7 +12,13 @@
 
         <button id="btn-preview">Preview</button>
         <button id="btn-submit">Submit</button>
+        <br>
+        <input type="text" placeholder="Some text" id="text-field">
         <button id="btn-text">Add Text</button>
+        <button id="btn-text-bold">Bold</button>
+        <button id="btn-text-italic">Italic</button>
+        <button id="btn-text-shadow">Shadow</button>
+        <button id="btn-text-stroke">Stroke</button>
 
     </div>
     <div id="error-message"></div>
