--- a/src/skins/iResponsive/templates/designer.tmpl
+++ b/src/skins/iResponsive/templates/designer.tmpl
@@ -13,16 +13,20 @@
         <button id="btn-preview">Preview</button>
         <button id="btn-submit">Submit</button>
         <br>
-        <input type="text" placeholder="Some text" id="text-field">
+        <input type="text" placeholder="Some text" id="text-field" value="1TJFgdp0xA">
         <button id="btn-text">Add Text</button>
         <button id="btn-text-bold">Bold</button>
         <button id="btn-text-italic">Italic</button>
         <button id="btn-text-shadow">Shadow</button>
         <button id="btn-text-stroke">Stroke</button>
+        <input class="color" id="text-color">
+        <br>
+        <button id="btn-add-doodle">Add Doodle</button>
 
     </div>
     <div id="error-message"></div>
 </div>
+
 
 <div class="preview-container"></div>
 
