--- a/src/skins/iResponsive/templates/designer.tmpl
+++ b/src/skins/iResponsive/templates/designer.tmpl
@@ -22,6 +22,11 @@
         <input class="color" id="text-color">
         <br>
         <button id="btn-add-doodle">Add Doodle</button>
+        <button id="btn-doodle-undo">Undo</button>
+        <button id="btn-doodle-clear">Clear</button>
+        <input type="number" id="doodle-line-width" value="10"> Width
+        <input class="color" id="doodle-color">
+
 
     </div>
     <div id="error-message"></div>
