--- a/src/skins/iResponsive/templates/designer.tmpl
+++ b/src/skins/iResponsive/templates/designer.tmpl
@@ -12,6 +12,9 @@
 
         <button id="btn-preview">Preview</button>
         <button id="btn-submit">Submit</button>
+
+        <button id="btn-reset">Reset</button>
+
         <br>
         <input type="text" placeholder="Some text" id="text-field" value="1TJFgdp0xA">
         <button id="btn-text">Add Text</button>
@@ -28,6 +31,12 @@
         <input class="color" id="doodle-color">
 
 
+        <input type="file" id="file-upload">
+
+        <button id="btn-filters">Filters</button>
+        <button id="btn-filters-intensity-low">Low</button>
+        <button id="btn-filters-intensity-medium">Medium</button>
+        <button id="btn-filters-intensity-high">High</button>
     </div>
     <div id="error-message"></div>
 </div>
