--- a/src/skins/iResponsive/templates/designer.tmpl
+++ b/src/skins/iResponsive/templates/designer.tmpl
@@ -1,6 +1,7 @@
 <div class="designer">
     <canvas id="ssg-canvas"></canvas>
     <div class="cliparts"></div>
+    <div class="effects"></div>
     <div class="toolbox">
         <button id="btn-up">&uarr;</button>
         <button id="btn-down">&darr;</button>
