--- a/src/skins/iResponsive/styles/_designer.scss
+++ b/src/skins/iResponsive/styles/_designer.scss
@@ -21,6 +21,26 @@
             height: 100%;
         }
     }
+
+
+    .cliparts {
+        border: 1px solid blue;
+        width: 100%;
+        height: 100px;
+    }
+
+    .effects {
+        width: 100%;
+        height: 100px;
+        border: 1px solid orangered;
+    }
+
+}
+
+.special-effect {
+    width: 80px;
+    margin: 2px;
+    cursor: pointer;
 }
 
 
