--- a/src/skins/iResponsive/styles/_designer.scss
+++ b/src/skins/iResponsive/styles/_designer.scss
@@ -1,16 +1,127 @@
-.designer {
-    width: 100%;
-    height: 100%;
-
-    #ssg-canvas {
-        display: block;
-        box-sizing: border-box;
-        margin:  0 auto;
-        border: 1px solid pink;
+.aam-designer-init {
+    .main-container {
         width: 100%;
-        height: 100%;
+        background-color: $background-color;
+        border-radius: 4px;
+        padding: 4px;
     }
 
+    .designer {
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        flex-direction: row;
+
+        .side--container {
+            width: 220px;
+            background-color: $color-white;
+            border-radius: 4px 0 0 4px;
+            overflow: hidden;
+        }
+
+        .toolbox {
+
+            &--buttons--container {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+
+            }
+            &--button {
+                height: 74px;
+                flex: 1;
+                cursor: pointer;
+                border: none;
+                background-color: $color-gray;
+                transition: background-color .4s;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                &--icon {
+                    width: 24px;
+                    height: 24px;
+                    display: block;
+                }
+
+                &--text {
+                    display: block;
+                    width: 100%;
+                    text-transform: uppercase;
+                    margin-top: 4px;
+
+                }
+
+                &--gallery {
+                    border-radius: 4px 0 0 0;
+                }
+
+                &.active {
+                    background-color: $color-white;
+                }
+
+            }
+
+            &--image-selection {
+                height: 250px;
+                border: 1px solid pink;
+
+                &--gallery, &--upload {
+                    width: 100%;
+                    height: 100%;
+
+                    display: none;
+
+                    &.active {
+                        display: block;
+                    }
+                }
+
+
+                &--gallery--container {
+                    max-height: 192px;
+                    overflow-y: auto;
+                    padding: 2px 18px;
+                }
+            }
+
+        }
+
+        .canvas--container {
+            flex: 1;
+            min-height: 180px;
+            min-width: 250px;
+        }
+
+        #ssg-canvas {
+            width: 96%;
+            height: 96%;
+        }
+
+        .gallery-image {
+            width: 50px;
+            margin: 2px;
+            cursor: pointer;
+            transition: all .2s;
+            border: 1px solid transparent;
+
+            &:hover {
+                transform: scale(1.1, 1.1);
+                border: 1px solid $dark-color;
+            }
+        }
+
+        #file-upload {
+            position: absolute;
+            top: -1000px;
+            left: -1000px;
+        }
+    }
+}
+
+.designer {
 
     .gallery-image {
         width: 55px;
@@ -22,9 +133,7 @@
         }
     }
 
-
     .cliparts {
-        border: 1px solid blue;
         width: 100%;
         height: 100px;
     }
@@ -32,7 +141,6 @@
     .effects {
         width: 100%;
         height: 100px;
-        border: 1px solid orangered;
     }
 
 }
@@ -43,11 +151,18 @@
     cursor: pointer;
 }
 
-
 .preview-container {
     box-sizing: border-box;
     width: 800px;
     height: 507px;
     border: 1px solid bisque;
     margin-top: 60px;
+}
+
+#logo-file {
+    position: absolute;
+    top: -1000px;
+    left: -1000px;
+    width: 0;
+    height: 0;
 }
