--- a/src/skins/iResponsive/templates/designer.tmpl
+++ b/src/skins/iResponsive/templates/designer.tmpl
@@ -1,46 +1,102 @@
 <div class="designer">
-    <canvas id="ssg-canvas"></canvas>
-    <div class="cliparts"></div>
-    <div class="effects"></div>
-    <div class="toolbox">
-        <button id="btn-up">&uarr;</button>
-        <button id="btn-down">&darr;</button>
-        <button id="btn-left">&larr;</button>
-        <button id="btn-right">&rarr;</button>
-        <button id="btn-rotate-left">&#8634;</button>
-        <button id="btn-rotate-right">&#8635;</button>
-        <button id="btn-flip">&harr;</button>
-
-        <button id="btn-preview">Preview</button>
-        <button id="btn-submit">Submit</button>
-
-        <button id="btn-reset">Reset</button>
-
-        <br>
-        <input type="text" placeholder="Some text" id="text-field" value="1TJFgdp0xA">
-        <button id="btn-text">Add Text</button>
-        <button id="btn-text-bold">Bold</button>
-        <button id="btn-text-italic">Italic</button>
-        <button id="btn-text-shadow">Shadow</button>
-        <button id="btn-text-stroke">Stroke</button>
-        <input class="color" id="text-color">
-        <br>
-        <button id="btn-add-doodle">Add Doodle</button>
-        <button id="btn-doodle-undo">Undo</button>
-        <button id="btn-doodle-clear">Clear</button>
-        <input type="number" id="doodle-line-width" value="10"> Width
-        <input class="color" id="doodle-color">
 
 
-        <input type="file" id="file-upload">
+    <div class="side--container">
 
-        <button id="btn-filters">Filters</button>
-        <button id="btn-filters-intensity-low">Low</button>
-        <button id="btn-filters-intensity-medium">Medium</button>
-        <button id="btn-filters-intensity-high">High</button>
+        <div class="toolbox">
+            <div class="toolbox--buttons--container">
+                <button class="toolbox--button toolbox--button--gallery active">
+                    <svg class="toolbox--button--icon" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 15c0-.552.448-1 1.001-1s.999.448.999 1-.446 1-.999 1-1.001-.448-1.001-1zm6.2 0l-1.7 2.6-1.3-1.6-3.2 4h10l-3.8-5zm7.8-5v14h-18v-14h18zm-2 2h-14v10h14v-10zm-6.462-9.385l2.244 5.385h2.167l-3.334-8-16.615 6.923 4 9.663v-5.265l-1.384-3.321 12.922-5.385z"/>
+                    </svg>
+                    <span class="toolbox--button--text" data-ref="previewGallery"></span>
+                </button>
+                <button class="toolbox--button toolbox--button--upload">
+                    <svg class="toolbox--button--icon" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18 10v13h-18v-13h18zm-13 2h-3v2h3v-2zm11 5c0-2.209-1.791-4-4-4s-4 1.791-4 4 1.791 4 4 4 4-1.791 4-4zm-4-2c-1.104 0-2 .897-2 2s.896 2 2 2 2-.897 2-2-.896-2-2-2zm-5.314-7l1.615-4.437 13.154 4.789-1.455 4v5.848l4-11.042-16.895-6.158-2.548 7h2.129z"/>
+                    </svg>
+                    <span class="toolbox--button--text" data-ref="upload"></span>
+                </button>
+            </div>
+
+            <div class="toolbox--image-selection">
+
+                <div class="toolbox--image-selection--gallery active">
+                    <div id="gallery-selector" class="toolbox--image-selection--gallery--selector aam-dropdown"></div>
+                    <div class="toolbox--image-selection--gallery--container"></div>
+
+                </div>
+                <div class="toolbox--image-selection--upload">
+                    <button id="btn-card-image-upload" class="toolbox--image-selection--upload--button">
+                        <input type="file" id="file-upload">
+                        <span data-ref="upload"></span>
+                    </button>
+
+                    <div class="toolbox--image-selection--upload--info"></div>
+                </div>
+
+            </div>
+
+
+
+
+        </div>
+
     </div>
-    <div id="error-message"></div>
+
+
+    <div class="canvas--container">
+        <canvas id="ssg-canvas"></canvas>
+    </div>
+
 </div>
+
+
+
+<div class="cliparts"></div>
+<div class="effects"></div>
+<div class="toolbox">
+    <button id="btn-up">&uarr;</button>
+    <button id="btn-down">&darr;</button>
+    <button id="btn-left">&larr;</button>
+    <button id="btn-right">&rarr;</button>
+    <button id="btn-rotate-left">&#8634;</button>
+    <button id="btn-rotate-right">&#8635;</button>
+    <button id="btn-flip">&harr;</button>
+
+    <button id="btn-preview">Preview</button>
+    <button id="btn-submit">Submit</button>
+
+    <button id="btn-reset">Reset</button>
+
+    <br>
+    <input type="text" placeholder="Some text" id="text-field" value="1TJFgdp0xA">
+    <button id="btn-text">Add Text</button>
+    <button id="btn-text-bold">Bold</button>
+    <button id="btn-text-italic">Italic</button>
+    <button id="btn-text-shadow">Shadow</button>
+    <button id="btn-text-stroke">Stroke</button>
+    <input class="color" id="text-color">
+    <br>
+    <button id="btn-add-doodle">Add Doodle</button>
+    <button id="btn-doodle-undo">Undo</button>
+    <button id="btn-doodle-clear">Clear</button>
+    <input type="number" id="doodle-line-width" value="10"> Width
+    <input class="color" id="doodle-color">
+
+
+
+    <button id="btn-filters">Filters</button>
+    <button id="btn-filters-intensity-low">Low</button>
+    <button id="btn-filters-intensity-medium">Medium</button>
+    <button id="btn-filters-intensity-high">High</button>
+    <br>
+    <input id="logo-file" type="file">
+    <button id="btn-add-logo">Add Logo</button>
+
+</div>
+<div id="error-message"></div>
+
 
 
 <div class="preview-container"></div>
