--- a/src/skins/iResponsive/styles/controls/_dropdown.scss
+++ b/src/skins/iResponsive/styles/controls/_dropdown.scss
@@ -3,10 +3,10 @@
     div.aam-dropdown {
         /* Size and position */
         position: relative;
-        width: 100%;
+        width: 96%;
         box-sizing: border-box;
         padding: 12px 10px;
-        margin-top: 10px;
+        margin: 10px auto 10px auto;
 
         /* Styles */
         background: $color-gray;
