--- a/src/skins/iResponsive/styles/main.scss
+++ b/src/skins/iResponsive/styles/main.scss
@@ -1,4 +1,10 @@
 @import "_base.scss";
 @import "_constants.scss";
 @import "_designer.scss";
+@import "_gallery.scss";
+@import "_preview.scss";
+@import "_not-supported.scss";
+@import "_datacapture.scss";
+@import "_loader.scss";
 @import "controls/_dropdown.scss";
+@import "controls/_range.scss";
