--- a/src/skins/iResponsive/styles/_base.scss
+++ b/src/skins/iResponsive/styles/_base.scss
@@ -33,5 +33,25 @@
     }
 
 
+    button {
+        cursor: pointer;
+    }
 
+
+    &.mobile {
+        padding: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        box-shadow: none;
+        border-radius: 0;
+        max-height: none;
+
+        .main-container {
+            border-radius: 0;
+        }
+
+    }
 }
