--- a/src/skins/iResponsive/styles/_constants.scss
+++ b/src/skins/iResponsive/styles/_constants.scss
@@ -1,9 +1,12 @@
 $color-gray: #e9e9e9;
+$color-gray-1: #e8e8e8;
+
 $dark-color: rgb(62, 76, 86);
 $dark-gray: #dadada;
 $color-white: #fff;
 $color-green: #41b42a;
 $color-light-gray: #f7f7f7;
+$color-white: #fff;
 $red-color: #EE0700;
 $disabled-color: #aaaaaa;
 
