--- a/src/skins/iResponsive/styles/main.scss
+++ b/src/skins/iResponsive/styles/main.scss
@@ -4,6 +4,7 @@
 @import "_gallery.scss";
 @import "_preview.scss";
 @import "_not-supported.scss";
+@import "_error.scss";
 @import "_datacapture.scss";
 @import "_loader.scss";
 @import "controls/_dropdown.scss";
