--- a/src/skins/iResponsive/styles/_datacapture.scss
+++ b/src/skins/iResponsive/styles/_datacapture.scss
@@ -23,12 +23,11 @@
             width: 52px;
             height: 52px;
             position: absolute;
-            bottom: 0;
+            top: 0;
             left: 0;
             background-color: $color-green;
             border: none;
-            border-top-right-radius: 8px;
-            border-bottom-left-radius: 4px;
+            border-radius: 0 0 8px 0;
 
             svg {
                 fill: $color-white;
@@ -44,8 +43,7 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            border-top-left-radius: 8px;
-            border-bottom-right-radius: 4px;
+            border-radius: 0 0 0 8px;
             transition: background-color .3s;
 
             &:disabled {
